--- a/assets/dataset_config.json
+++ b/assets/dataset_config.json
@@ -8,5 +8,10 @@
     "feature_size": 1,
     "sr": 16000,
     "hop_size": 0.5
+  },
+  "1": {
+    "feature_size": 6,
+    "sr": 16000,
+    "hop_size": 6
   }
 }
