--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -6,5 +6,10 @@
     "num_epochs": 50,
     "batch_size": 300,
     "learning_rate": 1e-3
+  },
+  "1": {
+    "num_epochs": 10,
+    "batch_size": 10,
+    "learning_rate": 1e-3
   }
 }
