--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -11,5 +11,10 @@
     "num_epochs": 10,
     "batch_size": 10,
     "learning_rate": 1e-3
+  },
+  "2": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-3
   }
 }
