--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -16,5 +16,10 @@
     "num_epochs": 100,
     "batch_size": 64,
     "learning_rate": 1e-3
+  },
+  "3": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-2
   }
 }
