--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -21,5 +21,10 @@
     "num_epochs": 100,
     "batch_size": 64,
     "learning_rate": 1e-2
+  },
+  "4": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-2
   }
 }
