--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -26,5 +26,11 @@
     "num_epochs": 100,
     "batch_size": 64,
     "learning_rate": 1e-2
+  },
+  "5": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-2,
+    "weight_decay": 1e-4
   }
 }
