--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -32,5 +32,11 @@
     "batch_size": 64,
     "learning_rate": 1e-2,
     "weight_decay": 1e-4
+  },
+  "6": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-2,
+    "weight_decay": 1e-4
   }
 }
