--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -37,6 +37,7 @@
     "num_epochs": 100,
     "batch_size": 64,
     "learning_rate": 1e-2,
-    "weight_decay": 1e-4
+    "weight_decay": 1e-4,
+    "normalize": 1
   }
 }
