[#39] mix function modified with new dataset config
[#39] mix_audio construction and piping complete

[#39] dataset config with snr bound added

[#39] new line EOF added

[#39] new line EOF added

--- a/assets/dataset_config.json
+++ b/assets/dataset_config.json
@@ -16,5 +16,12 @@
     "feature_size": 6,
     "sr": 16000,
     "hop_size": 6
+  },
+  "2": {
+    "feature_size": 6,
+    "sr": 16000,
+    "hop_size": 6,
+    "snr_low": -20,
+    "snr_high": 10
   }
 }
