[#43] data generation with noise mix complete
[#38] Noise file downloaded

[#38] Noise file download fixed

[#38] Noise file download fixed2

[#38] Noise file download fixed3

[#38] Noise file download fixed 4

[#38] Noise file download fixed 4

[#38] Noise file download fixed 4

[#38] music snippet generator added

[#38] music snippet generator added2

[#38] music snippet generator added3

[#38] music snippet generator added3

[#38] music snippet generator added3

[#38] noise generator construction finished

[#38] feature fixed

[#38] feature fixed

[#38] feature fixed

[#38] feature fixed

[#38] training with noise mix successful

[#38] training with noise mix successful

--- a/assets/dataset_config.json
+++ b/assets/dataset_config.json
@@ -1,11 +1,13 @@
 {
   "roots": {
     "music_root": "database/GTZAN/genres_original",
+    "noise_root": "database/ESC50/audio",
     "save_root": "dataset_raw",
     "metadata_file": "metadata.json"
   },
   "links": {
-    "music_link": "http://opihi.cs.uvic.ca/sound/genres.tar.gz"
+    "music_link": "http://opihi.cs.uvic.ca/sound/genres.tar.gz",
+    "esc_50_link": "https://github.com/karoldvl/ESC-50/archive/master.zip"
   },
   "0": {
     "feature_size": 1,
