--- a/requirements.txt
+++ b/requirements.txt
@@ -96,3 +96,9 @@ wget~=3.2
 librosa~=0.8.0
 audioread~=2.1.9
 scipy~=1.5.3
+
+matplotlib==3.4.2
+# matplotlib = 2.2.5 #for Python 2
+ffmpeg-python==0.2.0
+moviepy==1.0.3
+Pyside2==5.15.2
