--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ matplotlib
 mistune==0.8.4
 mkl-fft
 mkl-random
-mkl-service
+mkl-service==2.3.0
 nbclassic==0.3.1
 nbclient==0.5.3
 nbconvert==6.0.7
