--- a/assets/dataset_config.json
+++ b/assets/dataset_config.json
@@ -32,5 +32,61 @@
     "hop_size": 3,
     "snr_low": -10,
     "snr_high": 20
+  },
+  "10": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 5,
+    "snr_low": -10,
+    "snr_high": 20
+  },
+  "11": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -30,
+    "snr_high": 0
+  },
+  "12": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -25,
+    "snr_high": 5
+  },
+  "13": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -20,
+    "snr_high": 10
+  },
+  "14": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -15,
+    "snr_high": 15
+  },
+  "15": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -10,
+    "snr_high": 20
+  },
+  "16": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -5,
+    "snr_high": 25
+  },
+  "17": {
+    "feature_size": 5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -0,
+    "snr_high": 30
   }
 }
