[#76] Step size 5 added
[#76] Hop size input added

[#76] Hop size train directory added

[#76] Syntax Error fixed

[#76] Train Path editted

[#76] Changed Condition for saving snr_hop

[#76] Default Value added for the case there's no snr_hop_size in certain version

[#76] Tensorboard Directory fixed

[#77] code error fixed

--- a/assets/dataset_config.json
+++ b/assets/dataset_config.json
@@ -109,5 +109,13 @@
     "hop_size": 2.5,
     "snr_low": -0,
     "snr_high": 30
+  },
+  "20": {
+    "feature_size":5,
+    "sr": 16000,
+    "hop_size": 2.5,
+    "snr_low": -20,
+    "snr_high": 10,
+    "snr_hop_size": 5
   }
 }
