--- a/assets/train_config.json
+++ b/assets/train_config.json
@@ -38,5 +38,12 @@
     "batch_size": 128,
     "learning_rate": 1e-2,
     "weight_decay": 1e-4
+  },
+  "7": {
+    "num_epochs": 100,
+    "batch_size": 64,
+    "learning_rate": 1e-2,
+    "weight_decay": 1e-4,
+    "gamma": 0.1
   }
 }
