[#87] CQT Other bin added

--- a/assets/feature_config.json
+++ b/assets/feature_config.json
@@ -26,5 +26,21 @@
     "n_bins": 82,
     "bins_per_octave": 12,
     "fmin_note": "C2"
+  },
+  "3": {
+    "feature_type": "cqt",
+    "sr": 16000,
+    "hop_length": 256,
+    "n_bins": 72,
+    "bins_per_octave": 12,
+    "fmin_note": "C2"
+  },
+  "5": {
+    "feature_type": "cqt",
+    "sr": 16000,
+    "hop_length": 256,
+    "n_bins": 62,
+    "bins_per_octave": 12,
+    "fmin_note": "C2"
   }
 }
