[#78] STFT Feature added
[#78] STFT Feature Params Added

[#78] STFT Feature Params Added

[#78] STFT Feature Params Added

[#78] STFT Feature Params Added

[#78] STFT Feature Params Added

--- a/assets/feature_config.json
+++ b/assets/feature_config.json
@@ -26,5 +26,11 @@
     "n_bins": 82,
     "bins_per_octave": 12,
     "fmin_note": "C2"
+  },
+  "10": {
+    "feature_type": "stft",
+    "sr": 16000,
+    "hop_length": 256,
+    "n_fft": 4096
   }
 }
