--- a/requirements.txt
+++ b/requirements.txt
@@ -97,8 +97,12 @@ librosa~=0.8.0
 audioread~=2.1.9
 scipy~=1.5.3
 
-matplotlib==3.4.2
+matplotlib~=3.3.3
 # matplotlib = 2.2.5 #for Python 2
 ffmpeg-python==0.2.0
 moviepy==1.0.3
 Pyside2==5.15.2
+ffmpeg~=1.4
+scikit-image~=0.17.2
+selenium~=3.141.0
+scikit-learn~=0.23.2
