--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,105 @@
-absl-py==0.12.0
-anyio==3.1.0
-argon2-cffi==20.1.0
+appdirs==1.4.4
 async-generator==1.10
 attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
+audioread==2.1.9
 bleach==3.3.0
-brotlipy==0.7.0
 cachetools==4.2.2
-certifi==2020.12.5
-contextvars==2.4
+certifi==2021.5.30
+cffi==1.14.5
+chardet==3.0.4
+colorama==0.4.4
 cycler==0.10.0
+dataclasses @ file:///tmp/build/80754af9/dataclasses_1614363715916/work
+decorator==4.4.2
 defusedxml==0.7.1
 entrypoints==0.3
-google-auth==1.30.0
-google-auth-oauthlib==0.4.4
-grpcio==1.38.0
-immutables==0.15
-importlib-metadata==4.0.1
-ipykernel==5.5.5
-ipython==7.16.1
+ffmpeg-python==0.2.0
+future==0.18.2
+google-auth==1.4.2
+google-colab==1.0.0
+idna==2.8
+imageio==2.9.0
+imageio-ffmpeg==0.4.4
+importlib-metadata==4.5.0
+ipykernel==4.6.1
+ipython==5.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
-jedi==0.18.0
 Jinja2==3.0.1
-json5==0.9.5
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.12
-jupyter-console==6.4.0
+jupyter-console==5.2.0
 jupyter-core==4.7.1
-jupyter-server==1.8.0
-jupyterlab==3.0.16
+jupyter-http-over-ws==0.0.8
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.5.2
 jupyterlab-widgets==1.0.0
-lab==6.3
-llvmlite==0.34.0
-Markdown==3.3.4
+kiwisolver==1.3.1
+librosa==0.8.1
+llvmlite==0.36.0
 MarkupSafe==2.0.1
+matplotlib==3.3.4
 mistune==0.8.4
-nbclassic==0.3.1
+mkl-fft==1.3.0
+mkl-random==1.0.4
+mkl-service==2.3.0
+moviepy==1.0.3
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.0
-oauthlib==3.1.0
+networkx==2.5.1
+notebook==5.2.2
+numba==0.53.1
+numpy==1.19.5
 olefile==0.46
+packaging==20.9
+pandas==0.24.2
 pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client==0.10.1
-prompt-toolkit==3.0.18
-protobuf==3.17.0
-ptyprocess==0.7.0
+Pillow @ file:///C:/ci/pillow_1617386325740/work
+pooch==1.4.0
+portpicker==1.2.0
+proglog==0.1.9
+prompt-toolkit==1.0.18
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
+PySide2==5.15.2
 python-dateutil==2.8.1
 pytz==2021.1
-pyzmq==22.0.3
+PyWavelets==1.1.1
+pywin32==301
+pyzmq==22.1.0
 qtconsole==5.1.0
 QtPy==1.9.0
-requests-oauthlib==1.3.0
+requests==2.21.0
 resampy==0.2.2
 rsa==4.7.2
-Send2Trash==1.5.0
-simplejson==3.17.2
-sniffio==1.2.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-terminado==0.10.0
+scikit-image==0.17.2
+scikit-learn==0.24.2
+scipy==1.5.4
+selenium==3.141.0
+shiboken2==5.15.2
+simplegeneric==0.8.1
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+SoundFile==0.10.3.post1
 testpath==0.5.0
+threadpoolctl==2.1.0
+tifffile==2020.9.3
 torch==1.8.1
-torchaudio==0.8.0a0+e4e171a
 torchvision==0.9.1
-tqdm==4.60.0
+tornado==4.5.3
+tqdm==4.61.1
 traitlets==4.3.3
-txt2tags==3.7
+typing-extensions==3.10.0.0
+urllib3==1.24.3
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.0.1
-Werkzeug==2.0.1
 widgetsnbextension==3.5.1
+wincertstore==0.2
 zipp==3.4.1
-
-dataclasses~=0.8
-numpy~=1.19.2
-wget~=3.2
-librosa~=0.8.0
-audioread~=2.1.9
-scipy~=1.5.3
-
-matplotlib~=3.3.3
-# matplotlib = 2.2.5 #for Python 2
-ffmpeg-python==0.2.0
-moviepy==1.0.3
-Pyside2==5.15.2
-ffmpeg~=1.4
-scikit-image~=0.17.2
-selenium~=3.141.0
-scikit-learn~=0.23.2
